--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "تعلم الحاسوب",
-  "short_name": "تعلم",
+  "short_name":"تعلم الحاسوب ",
   "icons": [
     {
       "src": "icon-192.png",
